# synthetic-data-gen

./: .gitignore  ENHANCEMENTS.md  LICENSE  README.md  generators.py  pyproject.toml  quality.py  report.py  requirements.txt  synthdata.py
examples/: chaotic.yaml  example_config.yaml  fraud_detection.yaml  quickstart.py  timeseries.yaml
output/: customers.csv  products.csv
ps/: data.db
src/synthdata/: __init__.py  analytics.py  cli.py  config.py  generator.py  output.py
src/synthdata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/synthdata/generators/: __init__.py  base.py  campaigns.py  customers.py  operational_logs.py  products.py  support_tickets.py  transactions.py
src/synthdata/quality/: __init__.py  drift.py  duplicates.py  inconsistencies.py  injector.py  missing.py  noise.py  outliers.py
test/: customers.csv  products.csv  support_tickets.csv
tests/: __init__.py  test_synthdata.py
